--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ karl package Changelog
 Unreleased
 ----------
 
+- LP #496331: Calendar list view now shows a paginated listing of upcoming 
+  events with 20 events per page.
+
 - LP #497937 Corrected which tools are addable when creating a new community.
   (Backported from trunk.)
 
