--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,17 +4,21 @@ karl package Changelog
 Unreleased
 ----------
 
-- Improve usability on the formish 'sendalert' fields (see LP#564131)
+- TemplateAPI object now sets an 'error_message' attribute for formish
+  form submission requests w/ validation errors; templates will notice
+  this and render a top-of-form error message (fixes LP#564134).
+
+- Improve usability on the formish 'sendalert' fields (see LP#564131).
 
 - Re-specify default 'sendalert' value as True on calendar event add form
-  (fixes LP#564115)
+  (fixes LP#564115).
 
 - Add "overflow: auto" to the #right div CSS to prevent bad rendering when
   poorly formed (read: very long words w/ no word break, e.g. a long URL)
-  content is pulled into a side portlet (fixes LP#540296)
+  content is pulled into a side portlet (fixes LP#540296).
 
 - Slight tweaks to the Network Events search UI and behavior to improve user
-  experience (see LP#554028)
+  experience (see LP#554028).
 
 - Sacrifice a chicken and provide a default value for the 'min_pw_length'
   setting since certain invocations of the test framework cause that to not
