--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,7 +16,7 @@ Unreleased
 
 - Add "Community" to list of types in advanced search (LP#571218).
 
-- Add 'fax' field to user profiles (fixes LP#570204).
+- Add 'fax' field to user profiles (LP#570204).
 
 - Don't blow up when managing tags from profile when no tags are
   present for the profile (LP#558743)
