Add an "Any" option at the end of the letterbox, clearing any existing filter.
LP #570853

Index: CHANGES.txt
===================================================================
--- CHANGES.txt	(revision 5321)
+++ CHANGES.txt	(working copy)
@@ -4,6 +4,9 @@
 Unreleased
 ----------
 
+- Added an "Any" option at the end of the letterbox to allow clearing
+  any existing filter (LP#/570853).
+
 - On each communities sub-view, add a "quick links" panel on the right
   margin, with tabs showing tool links, recent content, and members.
   The last two are fetched on demand using AJAX.  See

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ karl package Changelog
 Unreleased
 ----------
 
+- Added an "Any" option at the end of the letterbox to allow clearing
+  any existing filter (LP#/570853).
+
 - On each communities sub-view, add a "quick links" panel on the right
   margin, with tabs showing tool links, recent content, and members.
   The last two are fetched on demand using AJAX.  See
