- Batching in syslog view (LP#563745).
- Also convert all render_template_to_response calls in admin.py to
  use a renderer instead.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ karl package Changelog
 Unreleased
 ----------
 
-- ...
+- Batching in syslog view (LP#563745).
 
 3.29 (2010-04-30)
 -----------------
