--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ karl package Changelog
 Unreleased
 ----------
 
+- Changed HTML ID for email icon in blog listing for customizations (LP #582500).
+
 - Added custom.css link into wsgi_errormsg.pt (LP #587104).
   
 - Duplicated views from old mailin monitor as new views which use postoffice.
