Ensured that wiki pages cannot be added outside of the wiki tool
Addresses part of LP #586458:  we still need to figure out why the forms
were trying to post to the view in context of the community, rather than the
tool, but at least this way we don't create a page in the wrong location.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ karl package Changelog
 Unreleased
 ----------
 
+- Ensured that wiki pages cannot be added outside of the wiki tool
+  (LP #586458).
+
 - Made profiles support multiple websites (LP #554018).
 
 - updated maintenance page (LP #587432)
