--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,10 @@ karl package Changelog
 Unreleased
 ----------
 
+- Members views were not updated to use the new websites field after multiple
+  websites change from 3.34, which caused an unexpected parameter error when
+  creating a new profile after invitation. Fixed and updated tests. (LP #591267).
+
 - Fixed bug in whitelist--address matching is now normalized to be indifferent
   to the inclusion or exclusion of a name part with an email address.  (IE,
   'Fred Flintstone <test@example.com>' == 'test@example.com')
