Fixed bug in entity conversion where numeric entities were not converted.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,8 @@ Unreleased
 - Fixed bug in mailin2 script that caused ZEO connections to be left open if
   there was a configuration error.
 
+- Fixed bug in entity conversion where numeric entities were not converted.
+
 3.38 (2010-07-09)
 -----------------
 
