--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,9 @@ Unreleased
 - Merged status views for error monitor and postoffice quarantine, for easier
   monitoring by SFUP.
 
+- Fixed bug in default layout provider: wrong template being called for 
+  intranet layout. (LP #612576)
+
 3.39 (2010-07-29)
 
 -----------------
