--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ karl package Changelog
 Unreleased
 ----------
 
+- Ensured that comment alerts work for comments made agaisnt forum posts
+  (LP #614370).
+
 - Fixed text indexing of profiles with attributes encoded as UTF8 or latin1
   (LP #614398).
 
